# face-detection

./: .gitattributes  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-docker.txt  requirements.txt
files/: ArchitectureDiagram.drawio  ArchitekturDiagramV2.drawio  FlowDiagram.drawio
local_test/: .env  compose.yml  google-cloud-credentials.json
local_test/db-dump/: profilepicture_2023-11-27.sql
poc/: enhanced_angle_alignment_scale_alignment_holdIndPlace.py  face_rotation2.py  make_image_horizontal_eyes.py  make_image_horizontal_look_towards.py  occlusion_detector.py  remove_background_segment_cam.py  remove_background_segment_mesh_cam.py  remove_background_selfie_cam.py
scripts/: demo_webcam.py  prepare_id_photo.py
src/: face_aligner.py  face_utilities.py  image_utilities.py  main.py  router.py  service.py
src/tests/: test_service.py  test_utils_convert.py
src/utils/: convert.py  visualize.py
