[project]
name = "face-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe~=0.10.8",
    "dlib>=19.24.6",
    "fastapi>=0.116.1",
    "pillow>=11.3.0",
    "pytest>=7.4.4",
    "uvicorn>=0.24.0.post1",
    "opencv-contrib-python-headless-rolling>=5.0.0.20221015",
    "python-multipart>=0.0.20",
    "numpy<2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = ["pytest~=7.4.3"]

[tool.pyright]
venvPath = "."
venv = ".venv"
