[project]
name = "face-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe~=0.10.32",
    "dlib>=19.24.6",
    "fastapi>=0.129.0",
    "pillow>=12.1.1",
    "uvicorn>=0.41.0",
    "opencv-python-headless>=4.8.0",
    "python-multipart>=0.0.22",
    "numpy<2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "ruff>=0.15.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
